--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+
 <head>
     <link rel="stylesheet" href="styles.css" />
     <title>Aluraflix</title>
@@ -17,3 +19,8 @@
 
 
 </body>
+
+
+
+
+</html>
