--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
         </div>
     </section>
 
+    <section>
+        <h2>Filmes e Séries</h2>
+        <div>
+            <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+        </div>
+    </section>
+
 </body>
 
 
